simpsons-quotes/manifiest/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpsons-mysql
spec:
  selector:
    matchLabels:
      app: simpsons-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: simpsons-mysql
    spec:
      containers:
      - image: mysql:8.0.29
        name: simpsons-mysql
        ports:
        - containerPort: 3306
          name: simpsons-mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: database-pv-claim
