simpsons-quotes/manifiest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-simpson
spec:
  selector:
    matchLabels:
      app: api-simpson
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: api-simpson
    spec:
      containers:
      - image: alejot2012/api-simpson:2
        name: api-simpson
        ports:
        - containerPort: 8000
