simpsons-quotes/manifiest/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpsons-mysql
spec:
  ports:
  - port: 3306
  selector:
    app: simpsons-mysql
