simpsons-quotes/manifiest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-simpson
spec:
  ports:
  - port: 8000
  selector:
    app: api-simpson
