simpsons-quotes/manifiest/ingress.yaml
apiVersion: networking.k8s.io/v1   
kind: Ingress
metadata:
  name: simpson-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: simpson.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-simpson
                port:
                  number: 8000
